Cambio de carta de Treecko

--- a/index.html
+++ b/index.html
@@ -32,30 +32,32 @@
                     <img src="./img/svg/treecko-sprite.png" alt="io" width="150px" class="card__img"/>
                 </header>
                 <section class="card__body">
-                    <h1 class="card__title">Diego Ramirez</h1>
-                    <h2 class="card__subtitle">Estudiante de Frontend</h2>
-                    <p class="card__text">Entusiasta con el aprendimiento que abarca todo sobre Frontend</p>
+                    <h1 class="card__title">TREECKO</h1>
+                    <a href="">
+                            <img src="./img/svg/Planta_Pokemon.png" alt="" width="100px">
+                    </a>
+                    </button>
+                    <h2 class="card__subtitle">3° Generacion / Region Hoenn</h2>
+                    <p class="card__text">Hace su nido en un árbol gigante y defiende ferozmente su territorio de cualquier peligro. Dicen que es el protector de los árboles del bosque.</p>
                 </section>
                 <footer class="card__footer">
                     <nav>
+                        <header>
+                            <h4>EVOLUCION</h4>
+                        </header>
                         <ul class="menu">
                             <li>
-                                <a href="https://www.facebook.com/diegofernando.ramirezsandoval.7/" >
-                                    <img src="./img/svg/facebook-svgrepo-com.svg" alt="fb" width="30px"/>
-                                </a> 
+                                <a href="#" >Grovyle</a> 
                             </li>
                             <li>
-                            <a href="https://www.instagram.com/un_elefante_oscuro/">
-                                    <img src="./img/svg/instagram-svgrepo-com.svg" alt="ig" width="30px">
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/nitro4741">
-                                    <img src="./img/svg/github-svgrepo-com.svg" alt="GitHub" width="30px"></a>
+                                <a href="#" >Sceptile</a> 
                             </li>
                         </ul>
                     </nav>
                 </footer>
+            </div>
+            <div>
+
             </div>
         </article>
     </main>
