Carta de Torchic

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                     <img src="./img/svg/treecko-sprite.png" alt="io" width="150px" class="card__img"/>
                 </header>
                 <section class="card__body">
-                    <h1 class="card__title">TREECKO</h1>
-                    <a href="">
+                    <h2 class="card__title">TREECKO</h2>
+                    <a href="#">
                             <img src="./img/svg/Planta_Pokemon.png" alt="" width="100px">
                     </a>
                     </button>
@@ -57,7 +57,33 @@
                 </footer>
             </div>
             <div>
-
+                <header class="card__header">
+                    <img src="./img/svg/torchic.png" alt="io" width="150px" class="card__img"/>
+                </header>
+                <section class="card__body">
+                    <h2 class="card__title">TORCHIC</h2>
+                    <a href="#">
+                            <img src="./img/svg/Fuego_Pokemon.svg" alt="" width="100px">
+                    </a>
+                    </button>
+                    <h2 class="card__subtitle">3° Generacion / Region Hoenn</h2>
+                    <p class="card__text">Si le atacan, se defiende escupiendo bolas de fuego que forma en el estómago. Los Torchic tienen aversión a la oscuridad porque les impide ver lo que los rodea.</p>
+                </section>
+                <footer class="card__footer">
+                    <nav>
+                        <header>
+                            <h4>EVOLUCION</h4>
+                        </header>
+                        <ul class="menu">
+                            <li>
+                                <a href="#" >Combusken</a> 
+                            </li>
+                            <li>
+                                <a href="#" >Blaziken</a> 
+                            </li>
+                        </ul>
+                    </nav>
+                </footer>
             </div>
         </article>
     </main>
