--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
 <body class="body">
     <main>
         <article class="hero">
-            <div class="card">
-                <header class="card__header">
+            <div class="card-treecko">
+                <header class="card-treecko__header">
                     <img src="./img/svg/treecko-sprite.png" alt="io" width="150px" class="card__img"/>
                 </header>
-                <section class="card__body">
-                    <h2 class="card__title">TREECKO</h2>
+                <section class="card-treecko__body">
+                    <h2 class="card-treecko__title">TREECKO</h2>
                     <a href="#">
                             <img src="./img/svg/Planta_Pokemon.png" alt="" width="100px">
                     </a>
                     </button>
-                    <h2 class="card__subtitle">3° Generacion / Region Hoenn</h2>
-                    <p class="card__text">Hace su nido en un árbol gigante y defiende ferozmente su territorio de cualquier peligro. Dicen que es el protector de los árboles del bosque.</p>
+                    <h2 class="card-treecko__subtitle">3° Generacion / Region Hoenn</h2>
+                    <p class="card-treecko__text">Hace su nido en un árbol gigante y defiende ferozmente su territorio de cualquier peligro. Dicen que es el protector de los árboles del bosque.</p>
                 </section>
-                <footer class="card__footer">
+                <footer class="card-treecko__footer">
                     <nav>
                         <header>
                             <h4>EVOLUCION</h4>
                         </header>
-                        <ul class="menu">
+                        <ul class="menu-treecko">
                             <li>
                                 <a href="#" >Grovyle</a> 
                             </li>
