--- a/index.html
+++ b/index.html
@@ -57,24 +57,24 @@
                 </footer>
             </div>
             <div>
-                <header class="card__header">
-                    <img src="./img/svg/torchic.png" alt="io" width="150px" class="card__img"/>
+                <header class="card-torchic__header">
+                    <img src="./img/svg/torchic.png" alt="io" width="150px" class="card-torchic__img"/>
                 </header>
-                <section class="card__body">
-                    <h2 class="card__title">TORCHIC</h2>
+                <section class="card-torchic__body">
+                    <h2 class="card-torchic__title">TORCHIC</h2>
                     <a href="#">
                             <img src="./img/svg/Fuego_Pokemon.svg" alt="" width="100px">
                     </a>
                     </button>
-                    <h2 class="card__subtitle">3° Generacion / Region Hoenn</h2>
-                    <p class="card__text">Si le atacan, se defiende escupiendo bolas de fuego que forma en el estómago. Los Torchic tienen aversión a la oscuridad porque les impide ver lo que los rodea.</p>
+                    <h2 class="card-torchic__subtitle">3° Generacion / Region Hoenn</h2>
+                    <p class="card-torchic__text">Si le atacan, se defiende escupiendo bolas de fuego que forma en el estómago. Los Torchic tienen aversión a la oscuridad porque les impide ver lo que los rodea.</p>
                 </section>
-                <footer class="card__footer">
+                <footer class="card-torchic__footer">
                     <nav>
                         <header>
                             <h4>EVOLUCION</h4>
                         </header>
-                        <ul class="menu">
+                        <ul class="menu-torchic">
                             <li>
                                 <a href="#" >Combusken</a> 
                             </li>
