--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </header>
                 <section class="card-treecko__body">
                     <h2 class="card-treecko__title">TREECKO</h2>
-                    <a href="#">
+                    <a class="card-treecko__tipo" href="#">
                             <img src="./img/svg/Planta_Pokemon.png" alt="" width="100px">
                     </a>
                     </button>
@@ -47,22 +47,22 @@
                         </header>
                         <ul class="menu-treecko">
                             <li>
-                                <a href="#" >Grovyle</a> 
+                                <a class="menu-treecko__link" href="#" >Grovyle</a> 
                             </li>
                             <li>
-                                <a href="#" >Sceptile</a> 
+                                <a class="menu-treecko__link" href="#" >Sceptile</a> 
                             </li>
                         </ul>
                     </nav>
                 </footer>
             </div>
-            <div>
+            <div class="card-torchic">
                 <header class="card-torchic__header">
-                    <img src="./img/svg/torchic.png" alt="io" width="150px" class="card-torchic__img"/>
+                    <img src="./img/svg/torchic.png" alt="io" width="125px" class="card-torchic__img"/>
                 </header>
                 <section class="card-torchic__body">
                     <h2 class="card-torchic__title">TORCHIC</h2>
-                    <a href="#">
+                    <a class="card-torchic__tipo" href="#">
                             <img src="./img/svg/Fuego_Pokemon.svg" alt="" width="100px">
                     </a>
                     </button>
@@ -76,10 +76,10 @@
                         </header>
                         <ul class="menu-torchic">
                             <li>
-                                <a href="#" >Combusken</a> 
+                                <a class="menu-torchic__link" href="#" >Combusken</a> 
                             </li>
                             <li>
-                                <a href="#" >Blaziken</a> 
+                                <a class="menu-torchic__link" href="#" >Blaziken</a> 
                             </li>
                         </ul>
                     </nav>
