--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
                     </nav>
                 </footer>
             </div>
+
             <div class="card-torchic">
                 <header class="card-torchic__header">
-                    <img src="./img/svg/torchic.png" alt="io" width="125px" class="card-torchic__img"/>
+                    <img src="./img/svg/torchic.png" alt="io" width="140px" class="card-torchic__img"/>
                 </header>
                 <section class="card-torchic__body">
                     <h2 class="card-torchic__title">TORCHIC</h2>
@@ -85,6 +86,37 @@
                     </nav>
                 </footer>
             </div>
+
+            <div class="card-mudkip">
+                <header class="card-mudkip__header">
+                    <img src="./img/svg/mudkip-pixel.png" alt="mudkip" width="140px" class="card-mudkip__img"/>
+                </header>
+                <section class="card-mudkip__body">
+                    <h2 class="card-mudkip__title">MUDKIP</h2>
+                    <a class="card-mudkip__tipo" href="#">
+                            <img src="./img/svg/Agua_Pokemon.svg.png" alt="" width="100px">
+                    </a>
+                    </button>
+                    <h2 class="card-mudkip__subtitle">3° Generacion / Region Hoenn</h2>
+                    <p class="card-mudkip__text">En tierra firme, puede levantar grandes cantos rodados haciendo palanca con sus cuatro patas. Duerme enterrado en el suelo, cerca del agua.</p>
+                </section>
+                <footer class="card-mudkip__footer">
+                    <nav>
+                        <header>
+                            <h4>EVOLUCION</h4>
+                        </header>
+                        <ul class="menu-mudkip">
+                            <li>
+                                <a class="menu-mudkip__link" href="#" >Marshtomp</a> 
+                            </li>
+                            <li>
+                                <a class="menu-mudkip__link" href="#" >Swampert</a> 
+                            </li>
+                        </ul>
+                    </nav>
+                </footer>
+            </div>
+            
         </article>
     </main>
 </body>
