update quitar punto

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </a>
                     </button>
                     <h2 class="card-mudkip__subtitle">3° Generacion / Region Hoenn</h2>
-                    <p class="card-mudkip__text">En tierra firme, puede levantar grandes cantos rodados haciendo palanca con sus cuatro patas. Duerme enterrado en el suelo, cerca del agua.</p>
+                    <p class="card-mudkip__text">En tierra firme, puede levantar grandes cantos rodados haciendo palanca con sus cuatro patas. Duerme enterrado en el suelo, cerca del agua</p>
                 </section>
                 <footer class="card-mudkip__footer">
                     <nav>
